NXP-26841: Cleanup / Format